# barkley-reference-architecture

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
barkley/: __init__.py  individual_baseline.py  missingness.py  rate_of_drift.py  schema.py  synthetic.py  temporal_binning.py
diagrams/: README.md
examples/: head_to_head_validation.py  run_reference_pipeline.py
results/: HEAD_TO_HEAD_RESULTS.md
tests/: test_reference_pipeline.py
